fixed button size bug by removing overflow hidden

--- a/assets/styles/assets.css
+++ b/assets/styles/assets.css
@@ -269,11 +269,8 @@ button.add-to-cart:disabled:hover {
 }
 
 .quantity-control {
-    width: 130px;
     display: flex;
-    align-items: center;
-    border-radius: 5px;
-    overflow: hidden;
+    
 }
 
 .quantity-btn {
@@ -284,9 +281,14 @@ button.add-to-cart:disabled:hover {
     border: none;
     cursor: pointer;
     font-size: 16px;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
+}
+
+.plus-btn {
+    border-radius: 0 5px 5px 0;
+}
+
+.minus-btn {
+    border-radius: 5px 0 0 5px;
 }
 
 .quantity-btn:hover {
